--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,9 @@ project:
 
 website:
   title: "Computational Loops"
+  twitter-card: true
+  open-graph: true
+  google-analytics: "GTM-TGXZFMJK"
   navbar:
     right:
       - href: posts/optimization/listing.qmd
